# BakerySystem

./: .gitignore  CMakeLists.txt  README.md  buildScript.sh
app/BakerySystem/: BakerySystem.hpp
app/BakerySystem/login/: db.txt  password.hpp  user.hpp
app/BakerySystem/login/tests/: login_tests.cpp  password_tests.cpp
app/BakerySystem/shop/: shop.hpp
app/BakerySystem/shop/products/: manager.hpp
app/BakerySystem/shop/products/tests/: manager_tests.cpp  products_tests.cpp
app/api/: api.hpp  session.hpp  shop.cpp  shop.hpp
app/api/products/: products.hpp
app/api/shop/: shop.cpp  shop.hpp
app/api/shop/products/: bakers.cpp  bakers.hpp  manager.hpp  products.hpp
app/api/shop/products/tests/: products_tests.cpp
app/client/: app.cpp  db.txt
